# Tank-robot

./: .gitignore  README.md  pyrightconfig.json
.devcontainer/: devcontainer.json  install-toolchain.sh
deployment/docs/: deployment_guide.md
deployment/scripts/: apply_systemd.sh  robot_start.sh  rock64_setup.sh  source_ros2_ws.sh
deployment/systemd/: rock64-robot.service  systemd_config.conf.example
docs/: cleanup_summary.md  communication_protocols.md  flashing_guide.md  stm32_cubemx_motor_setup.md  system_topology.md
firmware/esp32_sensors/: platformio.ini
firmware/esp32_sensors/src/: main.cpp
firmware/stm32_chassis/: CMakeLists.txt  platformio.ini  stm32_chassis.ioc
firmware/stm32_chassis/Core/: STM32F407VGTx_FLASH.ld
firmware/stm32_chassis/Core/Inc/: cubemx_transport.h  i2c_protocol.h  main.h  microros_app.h  protocol_def.h  protocol_gateway.h  stm32f4xx_hal_conf.h
firmware/stm32_chassis/Core/Src/: cubemx_transport.c  main.c  microros_app.c  mpu6050.c  protocol_def.c  protocol_gateway.c  stm32f4xx_hal_msp.c
firmware/stm32_chassis/Core/Startup/: startup_stm32f407vgtx.s
firmware/stm32_chassis/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
firmware/stm32_chassis/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_ltdc_ex.h
firmware/stm32_chassis/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_cryp.c  stm32f4xx_hal_mmc.c  stm32f4xx_hal_sd.c
firmware/stm32_chassis/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rock64_ranger_fw
firmware/stm32_chassis/cmake/: stm32_toolchain.cmake
firmware/stm32_chassis/micro_ros_lib/: README.txt
firmware/stm32_chassis/scripts/: sync_stm32_drivers.sh
firmware/stm32_chassis/tools/: CMakeLists.txt  test_parser.c
firmware/stm32_chassis/tools/build-host/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  protocol_gateway_tools.sln  test_parser.vcxproj  test_parser.vcxproj.filters
firmware/stm32_chassis/tools/build-host/test_parser.dir/Debug/: test_parser.exe.recipe  test_parser.ilk
firmware/stm32_chassis/tools/build-host/test_parser.dir/Debug/test_parser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
firmware/stm32_chassis/tools/build-host/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
firmware/stm32_chassis/tools/build-host/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
firmware/stm32_chassis/tools/build-host/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
firmware/stm32_chassis/tools/build-host/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
robot_ws/: README.md
robot_ws/scripts/: bootstrap_robot_ws.sh
ros2_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robot_bringup/config/: rock64_hardware.yaml
ros2_ws/src/robot_bringup/launch/: rock64_bringup.launch.py
ros2_ws/src/robot_drivers/: package.xml  setup.py
ros2_ws/src/robot_drivers/robot_drivers/: arduino_serial_bridge.py  esp32_camera_bridge.py  motor_bringup_test.py  stm32_binary_bridge.py  stm32_selftest_cli.py  stm32_serial_bridge.py
ros2_ws/src/robot_teleop/: package.xml  setup.py
ros2_ws/src/robot_teleop/robot_teleop/: cmd_vel_to_tracks.py  keyboard_teleop.py  ps5_device_check.py  ps5_ros_bridge.py
ros2_ws/src/ros_robot_controller/launch/: ros_robot_controller.launch.xml
ros2_ws/src/ros_robot_controller/ros_robot_controller/: ros_robot_controller_node.py
ros2_ws/src/ros_robot_controller_msgs/: CMakeLists.txt
ros2_ws/src/ros_robot_controller_msgs/msg/: GetPWMServoCmd.msg  SetPWMServoState.msg
scripts/: flash_stm32.sh  flash_stm32_windows.ps1  openocd_stm32f407.cfg
stubs/geometry_msgs/: msg.py
stubs/rclpy/: __init__.py  node.py
stubs/sensor_msgs/: msg.py
stubs/std_msgs/: msg.py
typings/geometry_msgs/msg/: __init__.pyi
typings/rclpy/: __init__.pyi  node.pyi
typings/sensor_msgs/msg/: __init__.pyi
typings/std_msgs/msg/: __init__.pyi
